frame/support/test/tests/pallet_ui/step_024.stderr
error[E0392]: parameter `T` is never used
  --> $DIR/step_024.rs:10:20
   |
10 |     pub struct Pallet<T> {}
   |                       ^ unused parameter
   |
   = help: consider removing `T`, referring to it in a field, or using a marker such as `std::marker::PhantomData`
